
2021-05-04  Ron Norman <rjn@inglenet.com>

	* parser.y: add check for CB_WORD being a NULL pointer

2021-03-07  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: honor COBC_CPPFLAGS passed to configure

2021-03-06  Simon Sobisch <simonsobisch@gnu.org>

	* tree.h [COB_EXTERNAL_XREF]: fixed define of no-op cobc_xref_call

2021-01-07  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_print_version): msgid change moving URLs to parameter per
	  gettext-guidelines

2021-01-02  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.h, cobc.c: removed unused cb_exception->explicit_enable_val

2020-12-23  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_initialize_compound): special handling for OCCURS 1

2020-12-21  Simon Sobisch <simonsobisch@gnu.org>

	* field.c, pplex.l, tree.c, typeck.c: fixed warning option querying enum
	  instead of actual value via cb_warn_opt_val
	
2020-12-18  Simon Sobisch <simonsobisch@gnu.org>

	FR #397: add support for JSON GENERATE anonymous JSON objects
	* parser.y: split _name_of to _xml_name_of and _json_name_of, the later
	  one with additional possible NAME ... IS OMITTED and
	  without GENERATE XML checks
	* typeck.c (is_subordinate_to_fields): cob_field based
	  variant of is_subordinate_to
	* typeck.c (syntax_check_ml_gen_name_list): additional parameter is_xml
	  to distinguish between XML and JSON generation (messages, possible rules)
	* typeck.c (syntax_check_ml_gen_name_list): check of NAME ... IS OMITTED
	
2020-12-17  Simon Sobisch <simonsobisch@gnu.org>

	bug #571 revised:
	* typeck.c (create_implicit_assign_dynamic_var): add ASSIGN name as
	  implicit VALUE clause for the implicit variable providing a
	  reasonable (expected) default if not manually set
	* warning.def (implicit-define): changed from "always on" to "only upon
	  request" as the unexpected "inconsistent empty filename" was fixed

2020-12-15  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c [!COB_ALLOW_UNALIGNED]: fixed unused variable warning